# preprompter

./: .gitignore  Cargo.toml  README.md  build.rs  plan-macos-screen-capture.md
config/: default.toml
src/: config.rs  main.rs
src/capture/: linux.rs  macos.rs  mod.rs  screen.rs  windows.rs
src/idle/: detector.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/logging/: jsonl.rs  mod.rs
src/storage/: mod.rs  s3.rs
