[package]
name = "preprompter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-platform screen capture daemon with idle detection and S3 upload"

[dependencies]
tokio = { version = "1.44", features = ["full", "tracing"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
aws-sdk-s3 = "1.65"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5", features = ["async"] }
core-foundation = "0.10"
core-graphics = "0.24"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["screensaver", "randr"] }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
] }

[dev-dependencies]
tempfile = "3.15"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
